--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ MarkupSafe==2.1.2
 pydantic==1.10.8
 six==1.16.0
 supervisor==4.2.5
-typing_extensions==4.6.3
+typing_extensions
 Werkzeug==2.3.4
 zipp==3.15.0
