--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
     blog-backend:
-        image: tsurol/blog:23.06.02.1800_1854a31
+        #image: tsurol/blog:23.06.02.1800_1854a31
+        image: tsurol/blog:23.06.06.1023_62e5c14 
         volumes:
             - ./src:/Users/a1/Project/blog-backend/src
         environment:
